tests/baselines/reference/exportClassNameWithObjectCommonJS.errors.txt
tests/cases/conformance/externalModules/exportClassNameWithObjectCommonJS.ts(1,14): error TS2717: Class name cannot be 'Object' when targeting ES5 with module CommonJS.


==== tests/cases/conformance/externalModules/exportClassNameWithObjectCommonJS.ts (1 errors) ====
    export class Object {}
                 ~~~~~~
!!! error TS2717: Class name cannot be 'Object' when targeting ES5 with module CommonJS.
    